# IMAS-Core

./: .gitattributes  .gitignore  .readthedocs.yml  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Doxyfile  GitArchiveDescribe.cmake  Makefile  Makefile-catalog  Makefile-hdf5  Makefile.Linux  Makefile.MacOS  Makefile.Windows  README.md  SkbuildCmakeArgs.cmake  access_layer_base_plugin.h  access_layer_plugin.h  access_layer_plugin_manager.cpp  access_layer_plugin_manager.h  al-lowlevel.pc.in  al_backend.h  al_const.h  al_context.cpp  al_context.h  al_defs.h.in  al_exception.cpp  al_exception.h  al_lowlevel.cpp  al_lowlevel.h  ascii_backend.cpp  ascii_backend.h  bld  dummy_backend.h  dumpAos.py  estrdup.c  hdf5_backend.cpp  hdf5_backend.h  hdf5_backend_factory.cpp  (+98 more)
.github/workflows/: cmake.yaml  docs.yml  pip-wheel.yaml  third-party-test.yaml  wheels.yml
.svn/: entries
.svn/text-base/: empty.c.svn-base  timed_struct_array.sh.svn-base  ual_jni.c.svn-base  ual_low_level.c.svn-base  ual_low_level.h.svn-base  ual_low_level_f77.c.svn-base  ual_low_level_mdsobjects.cpp.svn-base  ual_low_level_mdsplus.c.svn-base  ual_low_level_remote.c.svn-base  ual_low_level_swig.h.svn-base  ualmemory_javainterface_UALAccess.h.svn-base  ualmemory_javainterface_UALLowLevel.h.svn-base
_trash/: vcpkg-configuration.json  vcpkg.cmake
_trash/ci/: IMAS-AL-MDSplus-models-develop-GCCcore-10.2.0.eb.in
ci/: IMAS-AL-Core-develop-foss-2020b.eb.in  IMAS-AL-Core-develop-intel-2020b.eb.in  IMAS-AL-Lowlevel-dev.eb.in  IMAS-AL-Lowlevel-develop-foss-2020b.eb.in  IMAS-AL-Lowlevel-develop-intel-2020b.eb.in  IMAS-AL-MDSplus-models-dev.eb.in  IMAS-AL-MDSplus-models-develop-GCCcore-10.2.0.eb.in  IMAS-AL-Python-Bindings-dev.eb.in  IMAS-AL-Python-Bindings-develop-foss-2020b.eb.in  IMAS-AL-Python-Bindings-develop-intel-2020b.eb.in  build_and_test.ps1  build_and_test.sh  build_docs.sh  run_cibuildwheel_win.sh
ci/wheels/: cibw_before_build_win.sh  repair_windows.sh
common/: CMakeLists.txt  README.md  al_env.sh.in  identifiers.common.xsl
common/ci/: Data-Dictionary-develop-GCCcore-10.2.0.eb.in  IMAS-AL-Common-develop.eb.in  IMAS-develop-foss-2020b.eb.in  IMAS-develop-intel-2020b.eb.in  build_module.sh
common/cmake/: ALBuildDataDictionary.cmake  ALBuildDocumentation.cmake  ALCommonConfig.cmake  ALCore.cmake  ALSetCompilerFlags.cmake  FindMDSplus.cmake  FindSaxonHE.cmake
common/doc_common/: building_installing.rst  ci_build_docs.sh  conf.rst  deploy.ps1  dev_guide.rst  identifiers.rst  imas.rst  imas_uri.rst  plugins.rst  plugins_architecture.rst  plugins_examples.rst  requirements.txt  using_al.rst
docs/: .gitignore  Doxyfile  Doxyfile_access_layer_plugin_manager  Doxyfile_al_lowlevel  Doxyfile_hdf5_backend  Makefile  requirements.txt
docs/source/: api.rst  backends.rst  conf.py  configuration.rst  development.rst  doxygen.rst  doxygen_access_layer_plugin_manager.rst  doxygen_al_lowlevel.rst  doxygen_hdf5_backend.rst  faq.rst  index.rst  installation.rst  introduction.rst  plugins.rst  plugins_architecture.rst  plugins_examples.rst  plugins_framework.rst  troubleshooting.rst  uri.rst  usage.rst
docs/source/_static/plugins/sources/: debug_plugin.cpp  (+7 more)
docs/source/developers/: configuration.rst  development.rst  index.rst  installation.rst  plugins_architecture.rst  plugins_examples.rst  plugins_framework.rst
docs/source/developers/extending/: index.rst
docs/source/developers/getting_started/: index.rst
docs/source/templates/: base.html
docs/source/user_guide/: backends_guide.rst  configuration.rst  index.rst  installation.rst  uris_guide.rst
include/: access_layer_base_plugin.h  access_layer_plugin.h  access_layer_plugin_manager.h  al_backend.h  al_const.h  al_context.h  al_defs.h.in  al_exception.h  al_lowlevel.h  data_interpolation.h  extended_access_layer_plugin.h  fix_include_windows.h  iextended_access_layer_plugin.h  meson.build  provenance_plugin_feature.h  readback_plugin_feature.h  uri_parser.h
models-mdsplus/: Makefile.Linux
models-mdsplus/alport/: convert_names.py
models/mdsplus/: .gitignore  CMakeLists.txt  Makefile  Makefile.Windows  newmodel.bat  newmodel.sh
models/mdsplus/alport/: .gitignore  IDSDef2MDSpreTreeWithAoS.xsl  alport.py  convert_aos.cpp
pkgconfig/: al-core.pc.in  al-lowlevel.pc.in
python/: .gitignore  CMakeLists.txt  MANIFEST.in  _version.py.in  meson.build  pyproject.toml  setup.py
python/al_lowlevel/: CMakeLists.txt  __init__.py  _al_lowlevel.pyx  al_defs.pyx  al_lowlevel_interface.pxd  exception.py  imasdef.py
python/imas_core/: CMakeLists.txt  __init__.py  _al_lowlevel.pyx  al_defs.pxd  al_defs.pyx  al_lowlevel_interface.pxd  exception.py  imasdef.py
python/tests/: test_exception.py  test_imasdef.py  test_import.py
src/: CMakeLists.txt  access_layer_plugin_manager.cpp  al_backend.cpp  al_const.cpp  al_context.cpp  al_exception.cpp  al_lowlevel.cpp  ascii_backend.cpp  ascii_backend.h  data_interpolation.cpp  data_interpolation.h  flexbuffers_backend.cpp  flexbuffers_backend.h  memory_backend.cpp  memory_backend.h  meson.build  no_backend.cpp  no_backend.h  serialize_backend.cpp  serialize_backend.h
src/flatbuffers/: README.md
src/hdf5/: CMakeLists.txt  hdf5_backend.cpp  hdf5_backend.h  hdf5_backend_factory.cpp  hdf5_backend_factory.h  hdf5_dataset_handler.cpp  hdf5_events_handler.cpp  hdf5_events_handler.h  hdf5_hs_selection_reader.cpp  hdf5_hs_selection_reader.h  hdf5_hs_selection_writer.cpp  hdf5_hs_selection_writer.h  hdf5_reader.cpp  hdf5_reader.h  hdf5_utils.cpp  hdf5_utils.h  hdf5_writer.cpp  meson.build
src/mdsplus/: CMakeLists.txt  mdsplus_backend.cpp  mdsplus_backend.h
src/uda/: CMakeLists.txt  meson.build  pugiconfig.hpp  uda_backend.cpp  uda_backend.h  uda_cache.cpp  uda_cache.hpp  uda_debug.hpp  uda_exceptions.hpp  uda_path.cpp  uda_utilities.hpp  uda_xml.cpp  uda_xml.hpp
tests/: CMakeLists.txt  Makefile  Makefile.Linux  Makefile.Windows  context_test.cpp  imas_print_version.cpp  lowlevel_test.c  meson.build  test_lowlevel.c  test_mdsplus_backend.cpp  testlowlevel.cpp  testlowlevel_c.c  ual_low_level_test.c
(+8 files in other folders)
