["project"]
name="al-lowlevel"
authors = [
    { name = "ITER Organization", email = "imas-support@iter.org"},
]
description="Python bindings to the IMAS Access Layer lowlevel"
readme = "README.md"
requires-python = ">=3.6, <4"
url = "https://imas.iter.org/"
classifiers = [
        "Development Status :: 5 - Beta",
        "Intended Audience :: Developers",
        "Intended Audience :: Science/Research",
        "License :: Other/Proprietary License",
        "Programming Language :: Python :: 3",
        "Topic :: Scientific/Engineering :: Physics",
]

dynamic = ["version"]

dependencies = [
    "numpy", 
]

[project.optional-dependencies] 
test = [
    "pytest >= 7.2", 
]

[build-system]
requires = ["scikit-build-core", "cython", "cython-cmake", "numpy", "setuptools_scm"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
minimum-version = "0.8"
cmake.version = ">=3.18"
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["python/al_lowlevel/_version.py"]
cmake.source-dir = "."
cmake.args = ["-DAL_PYTHON_BINDINGS=ON"]
wheel.packages = ["python/al_lowlevel"]
wheel.license-files = []
wheel.exclude = ["lib/", "bin/", "include/", "**.pyx", "**.pxd"]

[tool.setuptools_scm] 
write_to = "python/al_lowlevel/_version.py"

