[project]
name = "imas-core"
authors = [{ name = "ITER Organization", email = "imas-support@iter.org" }]
description = "Python bindings to the IMAS Access Layer core"
readme = "README.md"
requires-python = ">=3.6, <4"
license = "LGPL-3.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
]

dynamic = ["version"]

dependencies = ["numpy"]

[project.optional-dependencies]
test = ["pytest>=8"]
cov = ["pytest-cov", "coverage2clover"]

[project.urls]
Homepage = "https://imas.iter.org"
Repository = "https://github.com/ITEROrganization/IMAS-Core"

[build-system]
requires = [
    "scikit-build-core>=0.9.3",
    "cython>=3.0.3",
    "cython-cmake>=0.2.0",
    "numpy",
    "setuptools>=64",
    "setuptools_scm>=8",
]
build-backend = "scikit_build_core.build"

[tool.cibuildwheel]
# Increase pip debugging output
build-verbosity = 1
# Only build on CPython 3.11
build = "cp311-*"
# Skip 32-bit builds
skip = ["*-win32", "*-manylinux_i686"]

[tool.cibuildwheel.environment]
CMAKE_POLICY_VERSION_MINIMUM = "3.5"

[tool.cibuildwheel.windows.environment]
# This does not work because pkg-config does not like backslashes,
# PKG_CONFIG_PATH = "{project}"
# do this instead (which will override this setting)
# set CIBW_ENVIRONMENT_WINDOWS=PKG_CONFIG_PATH=PWD.replace('\\', '/')

# CIBW_CONFIG_SETTINGS = 'cmake.args="--debug-find;--debug-output"'
# CIBW_CACHE_PATH = "./cibw_cache"
# Build third party library: deps and UDA
VCPKG_ROOT = "C:/vcpkg"
VCPKG_TARGET_TRIPLET = "x64-windows"
CMAKE_TOOLCHAIN_FILE = "C:/vcpkg/scripts/buildsystems/vcpkg.cmake"
CMAKE_PREFIX_PATH = "C:/vcpkg/installed/x64-windows;C:/vcpkg/installed/x64-windows/share;"
PKG_CONFIG_PATH = "C:/vcpkg/installed/x64-windows/lib/pkgconfig"
VCPKG_KEEP_ENV_VARS = "VCPKG_ROOT;CMAKE_PREFIX_PATH;CMAKE_TOOLCHAIN_FILE;CMAKE_POLICY_VERSION_MINIMUM;"

[tool.cibuildwheel.windows]
before-build = "bash {project}/ci/wheels/cibw_before_build_win.sh {project}"
repair-wheel-command = "bash ./ci/wheels/repair_windows.sh {wheel} {dest_dir}"

[tool.scikit-build.cmake.define]
BUILD_SHARED_LIBS = "ON"
DOCS_ONLY = { env = "DOCS_ONLY", default = "OFF" }
AL_BACKEND_HDF5 = { env = "AL_BACKEND_HDF5", default = "ON" }
AL_BACKEND_UDA = { env = "AL_BACKEND_UDA", default = "ON" }
AL_BACKEND_MDSPLUS = { env = "AL_BACKEND_MDSPLUS", default = "OFF" }
AL_BUILD_MDSPLUS_MODELS = { env = "AL_BUILD_MDSPLUS_MODELS", default = "OFF" }
AL_PYTHON_BINDINGS = "ON"
DOWNLOAD_DEPENDENCIES = { env = "DOWNLOAD_DEPENDENCIES", default = "ON" }
DD_GIT_REPOSITORY = { env = "DD_GIT_REPOSITORY", default = "EMPTY" }
DD_VERSION = { env = "DD_VERSION", default = "EMPTY" }
Boost_NO_BOOST_CMAKE = "ON"

[tool.scikit-build]
minimum-version = "0.8"
# cmake.version = ">=3.21"
# build-type="Debug" problem in github actions Windows runner
# cmake.build-type = "Release"
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["python/imas_core/_version.py"]
wheel.packages = ["python/imas_core"]
wheel.license-files = []
wheel.exclude = [
    "lib/",
    "bin/",
    "include/",
    "**.pyx",
    "**.pxd",
    "libal.so",
    "libal.so.*.*.*",
    "libmpi*.so.*.*.*",
    "libhdf5.so.*.*.*",
]

[tool.setuptools_scm]
write_to = "python/imas_core/_version.py"
local_scheme = "no-local-version"

[tool.pytest.ini_options]
testpaths = ["python/tests"]

[tool.coverage.run]
branch = true
omit = ["_version.py"]
