["project"]
name="al-lowlevel"
dynamic = ["authors", "classifiers", "description", "keywords", "requires-python", "version"]

[build-system]
requires = [
    "cmake-build-extension>=0.4",
    "cython",
    "numpy",
    "setuptools>=45",
    "setuptools_scm[toml]>=6.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
root = "../"
local_scheme = "dirty-tag"
